# onvif-learning

./: README.md
gsoap-2.8.101/: Makefile  config.h  config.status  gsoap++.pc  gsoap.spec
gsoap-2.8.101/autom4te.cache/: output.5  requests  traces.5  traces.6
gsoap-2.8.101/gsoap/: Makefile
gsoap-2.8.101/gsoap/.deps/: libgsoap___a-dom_cpp.Po  libgsoap___a-stdsoap2_cpp.Po  libgsoap_a-dom.Po  libgsoap_a-stdsoap2.Po  libgsoapck___a-dom_cpp.Po  libgsoapck___a-stdsoap2_ck_cpp.Po  libgsoapck_a-dom.Po  libgsoapck_a-stdsoap2_ck.Po  libgsoapssl___a-dom_cpp.Po  libgsoapssl___a-stdsoap2_ssl_cpp.Po  libgsoapssl_a-dom.Po  libgsoapssl_a-stdsoap2_ssl.Po
gsoap-2.8.101/gsoap/samples/: Makefile
gsoap-2.8.101/gsoap/samples/async/: Makefile  async.wsdl  asyncrest2.c  asyncsoap.cpp  asyncsoap2.cpp
gsoap-2.8.101/gsoap/samples/atom/: Makefile
gsoap-2.8.101/gsoap/samples/autotest/: Makefile
gsoap-2.8.101/gsoap/samples/aws/: Makefile
gsoap-2.8.101/gsoap/samples/calc/: Makefile
gsoap-2.8.101/gsoap/samples/calc++/: Makefile
gsoap-2.8.101/gsoap/samples/calc_xcode/: soapC.cpp
gsoap-2.8.101/gsoap/samples/chaining/: Makefile
gsoap-2.8.101/gsoap/samples/chaining++/: Makefile
gsoap-2.8.101/gsoap/samples/databinding/: Makefile
gsoap-2.8.101/gsoap/samples/dime/: Makefile
gsoap-2.8.101/gsoap/samples/dom/: Makefile
gsoap-2.8.101/gsoap/samples/factory/: Makefile
gsoap-2.8.101/gsoap/src/: Makefile  soapcpp2  soapcpp2_lex.c
gsoap-2.8.101/gsoap/wsdl/: Makefile  wsdlC.cpp
gsoap-2.8.101/tmp/demo/onvif-stream-url/application/: CMakeLists.txt  main.cpp
(+127 files in other folders)
